# pseudo-assembly-interpreter

./: .gitignore  ALU.cpp  ALU.h  CMakeLists.txt  Parser.cpp  Parser.h  Parser_test.cpp  Processor.h  Processor_test.cpp  Register.cpp  Register.h  TODO.txt  alu_test.cpp  consts.h  cu.cpp  cu.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  processor.cpp  registermemory.cpp  registermemory.h  visual_assembly_interpreter.pro
Google_tests/: CMakeLists.txt
